 2011-12-11 01:26  asfernandes 
   M src/jrd/blb.cpp
Backported fix for CORE-3601 - Incorrect TEXT BLOB charset transliteration on VIEW with trigger.

 2011-12-06 13:12  dimitr 
   M src/jrd/trig.h
Fixed CORE-3692: Cannot drop a NOT NULL constraint on a field participating in the UNIQUE constraint.

 2011-12-06 10:00  dimitr 
   M src/jrd/cmp.cpp
Fixed CORE-927: Grants don't work for procedures used inside views.

 2011-12-05 13:52  hvlad 
   M src/dsql/dsql.cpp
Fixed bug CORE-3680 : EXECUTE BLOCK statement and ISC_DSQL_EXECUTE2() problem

 2011-12-05 13:08  hvlad 
   M src/dsql/pass1.cpp
Fixed bug CORE-3690 : Wrong warning message for ambiguous query

 2011-12-01 09:52  dimitr 
   M src/jrd/exe.cpp
For a number of reasons, it seems being a good thing to unwind the trigger requests ASAP.

 2011-12-01 09:23  dimitr 
   M src/jrd/vio.cpp
Attempted to fix CORE-3490: Concurrency problem when using named cursors. The solution may look sub-optimal but it doesn't seem to affect the performance.

 2011-11-14 23:09  hvlad 
   M src/utilities/ntrace/fbtrace.conf
Update documentation

 2011-11-06 23:38  hvlad 
   M src/jrd/dyn_del.epp
Additional fix for CORE-3557 : AV in engine when preparing query against dropping table
Also fixed CORE-3579 : Can't drop table when computed field depends on later created another field

 2011-11-05 20:51  asfernandes 
   M src/jrd/intl.cpp
Fixed CORE-3650 - Recreation of collation leads to FB "death".

 2011-10-31 18:35  alexpeshkoff 
   M src/common/fb_exception.cpp
   M src/common/thd.cpp
   M src/common/thd.h
Fixed CORE-3646: Segmentation fault in multi-threaded program when using 2.5.x client library on Linux

 2011-10-16 14:11  hvlad 
   M src/jrd/trace/TraceConfigStorage.cpp
One more assertion

 2011-10-16 13:59  hvlad 
   M src/jrd/trace/TraceConfigStorage.cpp
Missed semicolon

 2011-10-16 13:49  hvlad 
   M src/jrd/trace/TraceConfigStorage.cpp
   M src/jrd/trace/TraceConfigStorage.h